archive/ingress-originals/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-ingress
  namespace: longhorn-system
  annotations:
    tailscale.com/hostname: longhorn-ui
spec:
  ingressClassName: tailscale
  rules:
  - host: longhorn-ui
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - secretName: "longhorn-ui"
    hosts:
    - longhorn-ui
